fix modal align

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ footer {
 	height: 100%;
 	background-color: rgb(0,0,0);
 	background-color: rgba(0,0,0,0.9);
+	text-align: center;
 }
 
 /*This is the styling for the photo when the modal opens*/
